services/uptime-kuma/manifests/03-uptime-kuma.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    app: "uptime-kuma"
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
    - name: main
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: uptime-kuma
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma
  labels:
    app: "uptime-kuma"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma
  template:
    metadata:
      labels:
        app: "uptime-kuma"
    spec:
      # securityContext:
      #   runAsUser: 911
      #   runAsGroup: 911
      #   fsGroup: 911
      #   fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:1
          imagePullPolicy: IfNotPresent
          ports:
            - name: main
              containerPort: 3001
              protocol: TCP
              hostPort: null
          volumeMounts:
            - name: data
              mountPath: /app/data
              readOnly: false
          # livenessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 1
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # readinessProbe:
          #   httpGet:
          #     port: 9696
          #     path: /ping
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   failureThreshold: 5
          #   successThreshold: 2
          #   timeoutSeconds: 5
          #   periodSeconds: 10
          # startupProbe:
          #   tcpSocket:
          #     port: 9696
          #   initialDelaySeconds: 10
          #   failureThreshold: 60
          #   successThreshold: 1
          #   timeoutSeconds: 2
          #   periodSeconds: 5
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
            limits:
              cpu: 400m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-data
