services/uptime-kuma/manifests/02-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "monitoring-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - uptime-kuma.monitoring.cluster.lab
      secretName: monitoring-tls-secret
  rules:
  - host: uptime-kuma.monitoring.cluster.lab
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: "uptime-kuma"
              port:
                number: 3001
